Fix artifact path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
-          name: dist
-          path: dist
+          name: functions
+          path: functions
   deploy:
     name: Deploy
     needs: build
@@ -28,7 +28,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@master
         with:
-          name: dist
+          name: functions
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
