--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,30 +5,14 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Install Dependencies
-        run: cd functions && npm install
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: functions
-          path: functions
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-      - name: Download Artifact
-        uses: actions/download-artifact@master
-        with:
-          name: functions
+        run: cd functions && npm ci
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
