refactor: update firebase deployment in workflow
Replace Accelery/firebase-deploy-functions-action with a direct
npx command for deploying Firebase functions. This change
ensures that the latest firebase-tools are used, providing
more control and potentially reducing third-party dependency
issues in the deployment process. The update specifically
addresses deployment of functions with added project and
token specification for seamless CI/CD operations.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
           cache: npm
           cache-dependency-path: functions/package-lock.json
       - run: cd functions && npm ci
-      - uses: Accelery/firebase-deploy-functions-action@v2
+      - run: npx firebase-tools@latest deploy --only functions --project check-weather-sg --token "$FIREBASE_TOKEN" --non-interactive
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
